fix: rename item-title classes for better clarity and mobile responsiveness

--- a/pages/games.html
+++ b/pages/games.html
@@ -1,4 +1,5 @@
-<div class="item-title">Klavyaturanın "←→↑↓" düymələri ilə oyna</div>
+<div class="item-title-desk">Klavyaturanın "←→↑↓" düymələri ilə oyna</div>
+<div class="item-title-mb">Ngage-nin "<span>🕹️</span>" düymələri ilə oyna</div>
 <div class="gamecontainer">
     <img src="../images/nokia.png" alt="">
     <svg class="ngage-btn" id="ngage-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140"
