fix: update item title class for consistency and improved styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="screen">
         <div class="brand">NOKIA RETRO</div>
         <div class="clock" id="clock">12:00</div>
-        <div class="item-title-desk item-title-mb">Xoş gəldin</div>
+        <div class="item-title">Xoş gəldin</div>
         <div class="line" style="width:60%"></div>
         <div class="content" id="content">
 
