--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <div id="boot" class="font-safe">
         BOOTING<span>_</span>
     </div>
-
     <div class="status">
         <div class="left font-safe">
-            <a href="/"><img class="profil" src="images/indir.png" alt="">
+            <a href="/">
+                <img class="profil" src="images/indir.png" alt="">
                 <div>
                     <span class="dot"></span>
                     <h1>Rashad</h1>
                 </div>
             </a>
+
         </div>
 
         <div style="display:flex; align-items:center; gap:10px;">
@@ -39,14 +40,18 @@
     </div>
 
 
+
     <div class="screen">
         <div class="brand font-safe">NOKIA RETRO</div>
         <div class="clock font-safe" id="clock">12:00</div>
+
         <div class="item-title"></div>
         <div class="line" style="width:60%"></div>
-        <div class="content" id="content">
-
+        <div class="content-wrapper">
+            <img src="images/kuralogo.png" class="kura-burn">
+            <div class="content" id="content"></div>
         </div>
+
     </div>
 
     <div class="nav">
