--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="{theme}">
 
     <div id="boot" class="font-safe">
-        BOOTING<span>_</span>
+        GÖZDƏ ÜHLƏNSİN<span>_</span>
     </div>
     <div class="status">
         <div class="left font-safe">
