Update HTML structure and replace favicon images

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
-<html lang="tr">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Modoldern</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Modoldern — Web Developer & Teacher Portfolio</title>
+    <meta name="description"
+        content="Web developer and teacher. I develop projects in JS, PHP, Tailwind, Svelte, Git, and MySQL. My real name is Rashad Kurbanov (Husanli).">
+
+    <meta name="keywords" content="modoldern, web developer, svelte, php, portfolio, tailwind, js">
+
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="Modoldern — Web Developer / Teacher">
+    <meta property="og:description" content="Svelte, PHP, JS projects and teaching experience.">
+    <meta property="og:url" content="https://modoldern.com">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/indir.png" type="image/x-icon">
+    <link rel="icon" media="(prefers-color-scheme: light)" href="/favicon-light.png?v=1">
+    <link rel="icon" media="(prefers-color-scheme: dark)" href="/favicon-dark.png?v=1">
+
+    <link rel="icon" sizes="32x32" href="/favicon-light.png">
+    <link rel="icon" sizes="192x192" href="/favicon-light.png">
+
+    <link rel="apple-touch-icon" href="/favicon-light.png">
+
+    <link rel="amphtml" href="https://modoldern.com/amp">
+
+    <link rel="manifest" href="/site.webmanifest">
 </head>
+
+
 
 <body class="{theme}">
 
@@ -17,7 +40,7 @@
     <div class="status">
         <div class="left font-safe">
             <a href="/">
-                <img class="profil" src="images/indir.png" alt="">
+                <img class="profil" src="favicon-dark.png" alt="Modoldern profile">
                 <div>
                     <span class="dot"></span>
                     <h1>Rashad</h1>
