correct image url

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="status">
         <div class="left font-safe">
             <a href="/">
-                <img class="profil" src="favicon-dark.png" alt="Modoldern profile">
+                <img class="profil" src="/favicon-dark.png" alt="Modoldern profile">
                 <div>
                     <span class="dot"></span>
                     <h1>Rashad</h1>
