--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Svelte, PHP, JS projects and teaching experience.">
     <meta property="og:url" content="https://modoldern.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://modoldern.com/images/profil.png">
+    <meta property="og:image" content="https://modoldern.com/images/razample.png">
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="256">
     <link rel="stylesheet" href="css/style.css">
