--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="256">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" media="(prefers-color-scheme: light)" href="/favicon-light.png?v=1">
     <link rel="icon" media="(prefers-color-scheme: dark)" href="/favicon-dark.png?v=1">
     <link rel="icon" sizes="32x32" href="/favicon-light.png">
